fix(reveal-card): fix second card being visible on small screens (#438)

--- a/src/framework/theme/components/card/reveal-card/reveal-card.component.scss
+++ b/src/framework/theme/components/card/reveal-card/reveal-card.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   position: relative;
-
+  overflow: hidden;
   &.revealed {
     .second-card-container {
       top: 0;
